# trakt-updater

./: Cargo.toml  README.md  config.ini.sample  interface.py  main.py  picotui_ext.py  requirements.txt  trakt_utils.py  txt_tv_parser.py
src/: cache.rs  main.rs  user.rs
src/util/: event.rs  mod.rs
