[package]
name = "trakt-updater"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.68"
serde_derive = "1.0.130"
serde = "1.0.130"
sqlite = "0.26.0"
http = "0.2.5"
reqwest = { version = "0.11.4", features = ["blocking"] }
chrono = "0.4.19"
